# MethaneProjectTFM

./: .gitignore  GetMachineInfo.sh.save  README.md  pyproject.toml  requirements.txt
Configs/: ConfigA.yaml  ConfigB.yaml  ConfigC.yaml  ProjectConfig.yaml  VisualizationConfig.yaml
Docs/: OfficialPipeline_ConfigB_UnsupervisedMBMPPlus.md  datos_bandas_absorcion
Notebooks/: 00_EDA_Teledeteccion_Datos_Metodologia.ipynb  03_Fig.ipynb  Build_Methodology_Figures_TFM.ipynb  ConfigC_WindEDA_Complete.ipynb  ExploreWindLayersConfigC.ipynb
Scripts/: AuditBeforeNewConfigCExperiment.sh  BuildThresholdCalibrationSummary.py  CleanupRepositoryConfigBUnsupervised.sh  RunConfigCFullExperiments.sh  RunConfigC_EnhancedUNet_V2_Calibration.sh  RunDatedFullExperiments_ConfigB_ConfigC.sh  RunFullConfigBUnsupervisedPipeline.sh  RunStep14_15_16_TransformerPlus.sh  RunStep14_15_16_TransformerPlus_FIXED.sh  RunTransformerPlus_ConfigB_ConfigC.sh  Step00ProjectAudit.py  Step01BuildDatasetIndex.py  Step02InspectMetadata.py  Step03VisualizeSamples.py  Step04PreviewFeatures.py  Step06BuildFeatureReadyNoGroundTruthFilter.py  Step07BuildFeaturesClean.py  Step08CheckFeatureTensorsClean.py  Step09CheckDataLoadersClean.py  Step10TrainSegmentationModelClean.py  Step11EvaluateSegmentationModelClean.py  Step12SelectVisualizationCases.py  Step13VisualizePredictions.py  Step14BuildRunHtmlReport.py  Step15CompareExperiments.py  Step16BuildComparisonHtmlReport.py  Step17AnalyzeResultsForChapter.py  Step18BuildChapterPredictionPanels.py  Step18BuildChapterPredictionPanelsFixed.py  Step19AuditProblemCases.py
(+272 files in other folders)
